[fix] Horizontaly stretch the build orders wrapper

--- a/src/scss/_placeholders.scss
+++ b/src/scss/_placeholders.scss
@@ -12,6 +12,7 @@
 }
 
 %build_orders_wrap {
+  flex-grow: 1;
   overflow-x: auto;
   border-top: 1px solid $border-color;
   border-left: 1px solid $border-color;
